Project maintenance. Release version 1.2.0

--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,8 @@
   "main": "src/json.date-extensions.js",
   "license": "MIT",
   "ignore": [
-    "**/.*",
-    "test"    
+    "*.sln",
+    "tests"    
   ],
   "keywords": [
     "json",
