--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "json.date-extensions",
-  "version": "1.2.0",
-  "main": "src/json.date-extensions.js",
+  "version": "1.2.1",
+  "main": "json.date-extensions.js",
   "license": "MIT",
   "ignore": [
     "*.sln",
